-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.2
-
None
-
35d4fdf52 (dev), d988115e0 (dev), 37e6b9cba (master)
-
DaVinci 84, DaVinci 85
[\printline and friends support regex|
https://doc.qt.io/qt-6/07-0-qdoc-commands-includingexternalcode.html#printline]:
If the substring argument is surrounded by slashes it is interpreted as a regular expression.
Example that is used is for detecting a closing bracket 'at the right level':
\printuntil /^\}/
Anyhow, when the closing bracket is prefixed with some spaces, one need to specially protect the spaces. This works:
\printuntil /^\ \ \ \ \}/
while this doesn't :
\printuntil /^ \}/
This is surprising, as whitespace normally doesn't need to be protected. This should either be fixed or documented.
- resulted in
-
QTBUG-118558 QDoc: DocParser::getRestOfLine no longer strips trailing backslashes and whitespace properly
-
- Closed
-
For Gerrit Dashboard: QTBUG-114937 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
495289,5 | QDoc: Fix regression in DocParser::getRestOfLine() | dev | qt/qttools | Status: MERGED | +2 | 0 |
496999,3 | Exclude QDoc's expected output from license check | dev | qt/qtqa | Status: MERGED | +2 | 0 |
497341,3 | Exclude QDoc's expected output from license check | master | qt/qtqa | Status: MERGED | +2 | 0 |